Make it a Javac plugin (#41)